# bevy-rust-gpu

./: Cargo.toml  README.md  all.html  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  trait.LoadRustGpuShader.html  trait.RustGpuMaterial.html  type.EntryPointName.html  type.EntryPointParameters.html
bevy_pbr_rust/: enum.MeshVertex.html  enum.PbrFragment.html  sidebar-items.js
bevy_rust_gpu/: all.html  enum.RustGpuBuilderModules.html  fn.reload_materials.html  index.html  sidebar-items.js  struct.ChangedShaders.html  struct.RustGpu.html  struct.RustGpuBuilderOutput.html  struct.RustGpuKey.html  struct.RustGpuMaterial2dPlugin.html  struct.RustGpuMaterialPlugin.html  struct.RustGpuPlugin.html  struct.RustGpuSettings.html  trait.EntryPoint.html  trait.LoadRustGpuShader.html  trait.RustGpuMaterial.html  type.EntryPointConstants.html  type.EntryPointName.html  type.EntryPointParameters.html  type.EntryPointTypes.html
entry_point/: trait.EntryPoint.html  type.EntryPointParameters.html
entry_point_export/: index.html  sidebar-items.js  struct.EntryPointExport.html  struct.Export.html  type.ExportHandle.html
lib/rust-gpu-builder-shared/: Cargo.toml  README.md
lib/rust-gpu-builder-shared/src/: lib.rs
plugin/: struct.RustGpuPlugin.html
prelude/: index.html  sidebar-items.js  struct.RustGpu.html  struct.RustGpuKey.html  struct.RustGpuPlugin.html  trait.EntryPoint.html  trait.RustGpuMaterial.html  type.EntryPointName.html  type.EntryPointParameters.html
rust_gpu/: struct.RustGpu.html
shader_meta/: fn.module_meta_events.html  index.html  struct.ChangedShaders.html  struct.ModuleMeta.html
src/: bevy_pbr_rust.rs  builder_output.rs  entry_point.rs  entry_point_export.rs  lib.rs  load_rust_gpu_shader.rs  plugin.rs  prelude.rs  rust_gpu.rs  rust_gpu_material.rs  shader_meta.rs  systems.rs
systems/: fn.reload_materials.html  (+2 more)
(+107 files in other folders)
