[package]
name = "bevy-rust-gpu"
version = "0.4.0"
edition = "2021"

[features]
default = ["hot-reload", "hot-rebuild", "bevy-pbr-rust"]
hot-reload = []
hot-rebuild = []
bevy-pbr-rust = []

[dependencies]
bevy = "0.10.0"
serde = "1.0.152"
serde_json = "1.0.93"
bevy_common_assets = { version = "0.5.0", features = ["json"] }
once_cell = "1.17.1"
