[package]
name = "bevy-rust-gpu"
version = "0.4.0"
edition = "2021"

[features]
default = ["hot-rebuild", "bevy-pbr-rust"]
hot-rebuild = []
bevy-pbr-rust = []

[patch.crates-io]
#rust-gpu-builder-shared = { git = "https://github.com/bevy-rust-gpu/rust-gpu-builder-shared" }
rust-gpu-builder-shared = { path = "../rust-gpu-builder-shared" }

[dependencies]
bevy = "0.10.0"
serde = "1.0.152"
serde_json = "1.0.93"
bevy_common_assets = { version = "0.6.0", features = ["json"] }
once_cell = "1.17.1"
rust-gpu-builder-shared = { version = "0.1.0", features = ["bevy"] }
