[package]
name = "bevy-rust-gpu"
version = "0.5.0"
edition = "2021"

[features]
default = ["msgpack", "hot-rebuild", "bevy-pbr-rust"]
hot-rebuild = []
bevy-pbr-rust = []
json = ["bevy_common_assets/json"]
msgpack = ["bevy_common_assets/msgpack"]

[dependencies]
bevy = "0.11.*"
serde = "1.0.152"
serde_json = "1.0.93"
bevy_common_assets = "0.7.0"
once_cell = "1.17.1"
rust-gpu-builder-shared = { path = "./lib/rust-gpu-builder-shared", features = ["bevy"] }
